Add Github Actions on push and on PRs [skip ci]

--- a/.github/workflows/checkguard.yml
+++ b/.github/workflows/checkguard.yml
@@ -1,7 +1,8 @@
 name: checkguard
 
 # Run this workflow every time a new commit pushed to your repository
-on: push
+
+on: [push, pull_request]
 
 jobs:
   # Set the job key. The key is displayed as the job name
