--- a/.github/workflows/checkguard.yml
+++ b/.github/workflows/checkguard.yml
@@ -14,12 +14,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checks out a copy of your repository on the ubuntu-latest machine
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-      - id: files
-        uses: jitterbit/get-changed-files@v1
+      - name: Setup Dependencies
+        uses: actions/setup-python@v2
+        with:
+            python-version: '3.7'
       - run: |
           pip install guardonce
           checkguard --version
+      # - id: files
+      #   uses: jitterbit/get-changed-files@v1
+      # - run: checkguard --version
