Apply suggestions from code review

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -10,7 +10,7 @@ cc_library(
 )
 
 cc_library(
-    name = "catch2_main",
+    name = "catch2_with_main",
     srcs = ["src/catch_with_main.cpp"],
     visibility = ["//visibility:public"],
     deps = ["//:catch2"],
