--- a/.github/workflows/linux-builds.yml
+++ b/.github/workflows/linux-builds.yml
@@ -13,18 +13,29 @@ jobs:
           - g++-8
           - g++-9
           - g++-10
-#          - clang++-7
+          - clang++-6.0
+          - clang++-7
           - clang++-8
           - clang++-9
-#          - clang++-10
+          - clang++-10
         build_type: [Debug, Release]
         std: [14]
+        include:
+        # cannot be installed on ubuntu-20.04 be default?
+#          - cxx: g++-6
+#            other_pkgs: g++-6
+          - cxx: clang++-6.0
+            other_pkgs: clang-6.0
+          - cxx: clang++-7
+            other_pkgs: clang-7
+          - cxx: clang++-10
+            other_pkgs: clang-10
 
     steps:
     - uses: actions/checkout@v2
 
     - name: Prepare environment
-      run: sudo apt install ninja-build
+      run: sudo apt-get install -y ninja-build ${{matrix.other_pkgs}}
 
     - name: Configure build
       working-directory: ${{runner.workspace}}
