Add surrogate TU for catch_benchmark

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -262,3 +262,5 @@ endif()
 
 list(APPEND CATCH_WARNING_TARGETS SelfTest)
 set(CATCH_WARNING_TARGETS ${CATCH_WARNING_TARGETS} PARENT_SCOPE)
+
+add_subdirectory(SurrogateCpps)
