--- a/.github/workflows/linux-builds.yml
+++ b/.github/workflows/linux-builds.yml
@@ -38,6 +38,17 @@ jobs:
             std: 14
             other_pkgs: clang-10
             surrogates: ON
+        # Clang 10 + C++17
+          - cxx: clang++-10
+            build_type: Debug
+            std: 17
+            other_pkgs: clang-10
+            surrogates: OFF
+          - cxx: clang++-10
+            build_type: Release
+            std: 17
+            other_pkgs: clang-10
+            surrogates: OFF
 
     steps:
     - uses: actions/checkout@v2
