--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,13 @@ projects/Generated
 DerivedData
 *.xccheckout
 Build
-.idea
-.vs
+/build/
+/.idea/
+/.vs/
+/.vscode/
 cmake-build-*
 benchmark-dir
 .conan/test_package/build
 bazel-*
+/.cache/
+/compile_commands.json
