--- a/.gitignore
+++ b/.gitignore
@@ -23,13 +23,9 @@ projects/Generated
 DerivedData
 *.xccheckout
 Build
-/build/
-/.idea/
-/.vs/
-/.vscode/
+.idea
+.vs
 cmake-build-*
 benchmark-dir
 .conan/test_package/build
 bazel-*
-/.cache/
-/compile_commands.json
